--- a/#2.1 - Pseudos y funciones/ej08.html
+++ b/#2.1 - Pseudos y funciones/ej08.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/ej8.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <ul>
+    <link rel="stylesheet" href="css/ej8.css" />
+  </head>
+  <body>
+    <div>
+      <ul>
         <li>Jesús</li>
         <li>Mario</li>
-        <li>María</li>
+        <li>Elvira</li>
         <li>Inés</li>
         <li>Óscar</li>
       </ul>
-</body>
+    </div>
+  </body>
 </html>
-
-
