--- a/UD04-Preprocesadores/Dashboard/index.html
+++ b/UD04-Preprocesadores/Dashboard/index.html
@@ -40,8 +40,7 @@
 
         <div>
           <i class="fas fa-map-marked"></i>
-          Sobre Nosotros
-        </div>
+          Sobre Nosotros</div>
         <div>
           <i class="fas fa-info"></i>
           Información
